tests/invalid_inputs/sema/class_rvalue_member_access.cpp

struct S {
	int a;
}

S foo() {
	S s;
	return s;
}

int main() {
	foo().a;
}
